# svc-wallet/api/rest/request_response_handler.go
@@ -73,7 +73,7 @@ func (c *WalletController) CreateWallet(w http.ResponseWriter, r *http.Request) 
 	}
 
 	w.Header().Set("Content-Type", "application/json")
-	w.Header().Set("Location", "/v1/wallet/"+reqData.PhoneNumber) // set the location for the new wallet
+	w.Header().Set("Location", "/v1/wallet/phone/"+reqData.PhoneNumber) // set the location for the new wallet
 	w.WriteHeader(http.StatusCreated)
 	w.Write(responseData)
 
@@ -89,13 +89,13 @@ func (c *WalletController) CreateWallet(w http.ResponseWriter, r *http.Request) 
 // @Tags         Wallet
 // @Accept       json
 // @Produce      json
-// @Param        phone_number  path     string  true  "Phone number (include country code, e.g., +123456789)"
+// @Param        phone_number  path     string  true  "Phone number"
 // @Success      200           {object}  wallet.GetWalletResponse "Wallet retrieved successfully"
 // @Failure      400           {object}  map[string]string        "Bad Request (Invalid phone number format)"
 // @Failure      404           {object}  map[string]string        "Wallet Not Found"
 // @Failure      500           {object}  map[string]string        "Internal Server Error"
-// @Router       /wallet/{phone_number} [get]
-func (c *WalletController) GetWallet(w http.ResponseWriter, r *http.Request) {
+// @Router       /wallet/phone/{phone_number} [get]
+func (c *WalletController) GetWalletByPhoneNumber(w http.ResponseWriter, r *http.Request) {
 	defer r.Body.Close()
 
 	ctx := r.Context()
@@ -141,6 +141,66 @@ func (c *WalletController) GetWallet(w http.ResponseWriter, r *http.Request) {
 	w.Write(responseData)
 
 	log.Info().Str("phone_number", phoneNumber).Msg("Get wallet response sent successfully")
+
+}
+
+
+
+// GetWallet retrieves an existing wallet by wallet id.
+// @Summary      Retrieve a wallet
+// @Description  Fetches the wallet details using the provided phone number query parameter.
+// @Tags         Wallet
+// @Accept       json
+// @Produce      json
+// @Param        wallet_id  path     string  true  "Wallet ID"
+// @Success      200           {object}  wallet.GetWalletResponse "Wallet retrieved successfully"
+// @Failure      400           {object}  map[string]string        "Bad Request (Invalid wallet ID format)"
+// @Failure      404           {object}  map[string]string        "Wallet Not Found"
+// @Failure      500           {object}  map[string]string        "Internal Server Error"
+// @Router       /wallet/{wallet_id} [get]
+func (c *WalletController) GetWalletByID(w http.ResponseWriter, r *http.Request) {
+	defer r.Body.Close()
+
+	ctx := r.Context()
+	log := logger.Ctx(ctx)
+
+	if r.Method != http.MethodGet {
+		log.Warn().Msg("Method not allowed")
+		respondWithError(w, http.StatusMethodNotAllowed, "Method not allowed")
+		return
+	}
+
+	walletID := r.PathValue("wallet_id")
+
+	log.Info().Str("wallet_id", walletID).Msg("Retrieving wallet by wallet ID")
+
+	getResponse, err := c.service.GetWalletByID(ctx, walletID)
+	if err != nil {
+		if errors.Is(err, wallet.ErrWalletNotFound) { // dont leak database errors
+			//log.Warn().Err(err).Str("phone_number", phoneNumber).Msg("Failed to get wallet by phone number")
+			respondWithError(w, http.StatusNotFound, err.Error())
+			return
+		} else if errors.Is(err, wallet.ErrInvalidWalletID) {
+			log.Warn().Err(err).Msg("Invalid wallet id")
+			respondWithError(w, http.StatusBadRequest, err.Error())
+			return
+		}
+		//log.Error().Err(err).Msg("Failed to get wallet")
+		respondWithError(w, http.StatusInternalServerError, "Internal server error")
+		return
+	}
+
+	responseData, err := json.Marshal(getResponse)
+	if err != nil {
+		log.Error().Err(err).Msg("Failed to marshal response")
+		respondWithError(w, http.StatusInternalServerError, "Failed to marshal response")
+		return
+	}
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	w.Write(responseData)
+
+	log.Info().Str("wallet_id", walletID).Msg("Get wallet response sent successfully")
 
 }
 
