# svc-wallet/docs/swagger.yaml
@@ -8,6 +8,8 @@ definitions:
         description: a pointer because it can be null if the wallet is not part of
           a family
         type: string
+      national_id:
+        type: string
       owner_name:
         description: since they are 3 fields only i will not use a validation library
         type: string
@@ -31,9 +33,13 @@ definitions:
     properties:
       balance:
         type: integer
+      birth_date:
+        type: string
       currency_code:
         type: string
       family_id:
+        type: string
+      national_id:
         type: string
       owner_name:
         type: string
@@ -108,16 +114,16 @@ paths:
       summary: Create a new wallet
       tags:
       - Wallet
-  /wallet/{phone_number}:
+  /wallet/{wallet_id}:
     get:
       consumes:
       - application/json
       description: Fetches the wallet details using the provided phone number query
         parameter.
       parameters:
-      - description: Phone number (include country code, e.g., +123456789)
+      - description: Wallet ID
         in: path
-        name: phone_number
+        name: wallet_id
         required: true
         type: string
       produces:
@@ -128,7 +134,7 @@ paths:
           schema:
             $ref: '#/definitions/wallet.GetWalletResponse'
         "400":
-          description: Bad Request (Invalid phone number format)
+          description: Bad Request (Invalid wallet ID format)
           schema:
             additionalProperties:
               type: string
@@ -194,6 +200,46 @@ paths:
               type: string
             type: object
       summary: Modify wallet balance
+      tags:
+      - Wallet
+  /wallet/phone/{phone_number}:
+    get:
+      consumes:
+      - application/json
+      description: Fetches the wallet details using the provided phone number query
+        parameter.
+      parameters:
+      - description: Phone number
+        in: path
+        name: phone_number
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Wallet retrieved successfully
+          schema:
+            $ref: '#/definitions/wallet.GetWalletResponse'
+        "400":
+          description: Bad Request (Invalid phone number format)
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Wallet Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Retrieve a wallet
       tags:
       - Wallet
 swagger: "2.0"
